[gd_scene load_steps=2 format=2]

[ext_resource path="res://Systems/Interactables/ClickableMesh.gd" type="Script" id=1]

[node name="ClickableMesh" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
[connection signal="mouse_entered" from="." to="." method="_on_ClickableMesh_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ClickableMesh_mouse_exited"]
